# peochain-demo

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  docker-compose.yml
api/: Dockerfile  api_test.go  go.mod  handlers.go  main.go
bridge/: Cargo.toml  Dockerfile
bridge/src/: bridge.rs  lib.rs
bridge/tests/: integration_test.rs
ci/: github-actions.yml
consensus/: Cargo.toml  Dockerfile  README.md
consensus/src/: lib.rs  main.rs
consensus/tests/: integration_test.rs
docs/: architecture.md  investor_pitch.md  roadmap.md
evm/: Cargo.toml  Dockerfile
evm/contracts/: erc20.sol  erc721.sol
evm/src/: evm_core.rs  lib.rs
evm/tests/: integration_test.rs
scripts/: deploy_testnet.sh  init_data.sh  start_nodes.sh
