[package]
name = "consensus"
version = "0.1.0"
edition = "2021"
authors = ["D.Krizhanovskyi <dkrizhanovskyi@peopay.io>"]
description = "PoSyg + DCS consensus module for PeoChain."
license = "MIT"

[dependencies]
# Specify any external crates if needed; for now, it's minimal.

[dev-dependencies]
# Include any crates needed only for testing.

[lib]
name = "peo_consensus"
path = "src/lib.rs"

[[bin]]
name = "consensus_node"
path = "src/main.rs"
