[package]
name = "consensus"
version = "0.1.1"
edition = "2021"
authors = ["D.Krizhanovskyi <d.krizhanovskyi@peochain.xyz>"]
description = "PoSyg + DCS consensus module for PeoChain."
license = "MIT"

[dependencies]
rand = "0.8.5"

[dev-dependencies]

[lib]
name = "peo_consensus"
path = "src/lib.rs"

[[bin]]
name = "consensus_node"
path = "src/main.rs"